# PyFIDESlib

./: .gitignore  .gitmodules  CMakeLists.txt  README.md  build.sh  pyproject.toml
examples/: 00_onboarding.py  01_chebyshev.py  02_step_herminirocket.py  03_offload.py  lee_alpha8_coeffs.py
fideslib_py/: __init__.py
src/: bindings.cpp
