[project]
name = "fideslib-py"
version = "2.1.2+local"
description = "Python bindings for FIDESlib (CKKS on GPU, patched OpenFHE 1.5.1)"
requires-python = ">=3.12"
authors = [{ name = "CAPS-UMU / HerMiniRocket" }]
license = { text = "MIT" }
readme = "README.md"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["fideslib_py"]
# _core.so is gitignored (arch/python-specific 23MB binary), but must still be
# packaged into the wheel — artifacts re-includes VCS-ignored files.
artifacts = ["fideslib_py/*.so"]

# _core.so is RPATH'd to /usr/local/cuda/lib64 — no LD_LIBRARY_PATH needed.
# Rebuild against this machine's Python with: ./build.sh /path/to/python

[tool.hatch.metadata]
allow-direct-references = true
